<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_DeviceCount" Id="{686e780f-41aa-4b76-a257-b5dd36823fe9}">
    <Declaration><![CDATA[TYPE ST_DeviceCount:
STRUCT
	aId: ARRAY[1..4] OF BYTE;
	nCount: DINT := 0;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>